--- a/app/messagePost.html
+++ b/app/messagePost.html
@@ -18,7 +18,7 @@
         <div class="container panel panel-default" ng-controller="messagePostCtrl">
             <form class="panel-body">
                 <h4>Post a message to the server</h4>
-                <input type="text" class="form-control" ng-model="data.msg" />
+                <input type="text" class="form-control" ng-model="msg.data" />
                 <button class="btn btn-success" ng-click="post()">Post Message</button>
             </form>
         </div>
