Small fixes; Structure cleanup.

--- a/app/module/message/messageList.html
+++ b/app/module/message/messageList.html
@@ -1,8 +1,7 @@
 <div class="container panel panel-default">
     <div class="panel-body"  ng-repeat="msg in msgArr">
         <div ng-switch on="msg.type">
-            {{msg.user}}
-            <span ng-switch-when="text">{{msg.data}}</span>
+            <div class="alert alert-info" ng-switch-when="text"><strong>{{msg.user}}</strong> {{msg.data}}</div>
             <img ng-switch-when="base64image" ng-src="{{msg.data}}"></img>
         </div>
     </div>
