--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,6 @@
         <script src="module/entry.js"></script>
     </head>
     <body>
-        <message-list ng-controller="messageReadCtrl"></div>
+        <message-list ng-controller="messageReadCtrl"></message-list>
     </body>
 </html>
